# raytracer-optimiser

./: ANALYSE_OPTIMISATION.md  BILAN_EVALUATION3.md  CMakeLists.txt  EVALUATION2_PLAN.md  GUIDE_BSP.md  GUIDE_PROFILAGE.md  GUIDE_TESTS.md  MODIFICATIONS_THREADING.md  RECAP_OPTIMISATION.md  REPORT.md  RESUME_BILAN.md  RESUME_MODIFICATIONS.md  THREADING_IMPLEMENTATION.md  compare_profiles.sh  generate_profile_graph.sh  install_profiling_tools.sh  measure_baseline.sh  measure_threading.sh  profile_final.sh  profile_initial.sh  run_tests.sh  workflow_optimisation.sh
profiling/baseline/: times_baseline.txt
scenes/: edge-case-empty.json
src/lodepng/: Makefile  cmake_install.cmake
src/rayimage/: Makefile  cmake_install.cmake
src/raymath/: AABB.hpp  Makefile  Vector3.hpp  cmake_install.cmake
src/rayscene/: BSPTree.cpp  BSPTree.hpp  CMakeLists.txt  Camera.cpp  Makefile  Mesh.cpp  Mesh.hpp  Plane.cpp  Plane.hpp  Scene.cpp  Scene.hpp  SceneObject.cpp  SceneObject.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  cmake_install.cmake
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compare_images  compare_images.cpp  run_test.cmake
